5.0.1
* New aSmack and java-dns versions
* Fix reconnection issues with google apps (Issue 377)
* Adding shortcut to change keyboard

5.0.0
* Fix MUC creation with OpenFire
* Fix "where" command infinite notifications
* Enhanced application configuration
* New ASmack version
* Fix vulnerability

4.4.4
* Fix long SMS issue when Sent Notification is disabled
* Manage Hangout account differently to avoid multiple notifications
* Phone command refactoring with new hangup command to stop the current phone call, and new speaker command to manage the phone speaker
* New ASmack version

4.4.3
* New ASmack library
* New sub-command to filter notification by content
* Fix several Force Close
* Fix regression on sms when the message contains a :

4.4.2
* New activate/deactivate command to manage enabled commands
* New video command
* Enhances camera management
* New ASmack library
* New setting to filter notified address resources
* New setting to configure the ping interval
* Adds more details during connection establishment
* Re-adding ads in the free version
* Fix several disconnection issues

4.4.1
* Fixes connection issue introduced in 4.4 when having pending offline messages
* Improves MUC creation

4.4
* UI enhancements for better usability
* Get all notifications of your phone via the accessibility feature and new command notification
* MMS notifications
* MMS command to read MMS stored in the phone
* Music command to control the Music application of the phone (play/stop/next/previous/volume...)
* Settings command to update GTalkSMS settings via Xmpp

4.3
* Commands can be completely disabled to save resources,  e.g. TTS (Issue 287)
* Added "Ping Server" button (does not work always) (Issue 292)
* Removed Google Analytics and AdMob - GTalkSMS is now AdFree! (Issue 293)
* Initiate a call with bypassing the dialer interface (Issue 297)

4.1 - 4.2
* Fix compatibility issues between old Android version and Holo
* Bug fixes

4.0